docker/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: store
  annotations:
    # Creates an NEG after an Ingress is created
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: store
    component: rails
    role: web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8081
    name: puma
    protocol: TCP
  selector:
    app: store
    component: rails
    role: web
